deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid19-deployment
  labels:
    app: vuejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vuejs
  template:
    metadata:
      labels:
        app: vuejs
    spec:
      containers:
        - name: covid19-frontend
          image: denisduev/covid-19-vuejs:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: covid19-service-frontend
spec:
  selector:
    app: vuejs
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: covid19-ingress
spec:
  rules:
    - host: my.covid19.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: covid19-service-frontend
                port:
                  number: 80
          - path: /news
            pathType: Prefix
            backend:
              service:
                name: spring-boot
                port:
                  number: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid19-news-deployment
  labels:
    app: spring-boot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
        - name: covid19-news-be
          image: denisduev/covid-19:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
spec:
  selector:
    app: spring-boot
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
